copying over recent changes from develop branch

--- a/documentation/operators.html
+++ b/documentation/operators.html
@@ -732,6 +732,8 @@ operators.</p>
 <li><a href="/documentation/operators/just.html"><code>items</code></a></li>
 <li><a href="/documentation/operators/join.html"><strong><code>Join</code></strong></a></li>
 <li><a href="/documentation/operators/sum.html"><code>join</code></a> (string)</li>
+<li><a href="/documentation/operators/all.html"><code>jortSort</code></a></li>
+<li><a href="/documentation/operators/all.html"><code>jortSortUntil</code></a></li>
 <li><a href="/documentation/operators/just.html"><strong><code>Just</code></strong></a></li>
 <li><a href="/documentation/operators/map.html"><code>keep</code></a></li>
 <li><a href="/documentation/operators/map.html"><code>keep-indexed</code></a></li>
@@ -776,8 +778,10 @@ operators.</p>
 <li><a href="/documentation/operators/observeon.html"><code>ObserveOnDispatcher</code></a></li>
 <li><a href="/documentation/operators/from.html"><code>of</code></a></li>
 <li><a href="/documentation/operators/from.html"><code>of_array</code></a></li>
+<li><a href="/documentation/operators/from.html"><code>ofArrayChanges</code></a></li>
 <li><a href="/documentation/operators/from.html"><code>of_enumerable</code></a></li>
 <li><a href="/documentation/operators/from.html"><code>of_enumerator</code></a></li>
+<li><a href="/documentation/operators/from.html"><code>ofObjectChanges</code></a></li>
 <li><a href="/documentation/operators/filter.html"><code>OfType</code></a></li>
 <li><a href="/documentation/operators/from.html"><code>ofWithScheduler</code></a></li>
 <li><a href="/documentation/operators/backpressure.html"><code>onBackpressureBlock</code></a></li>
@@ -787,6 +791,7 @@ operators.</p>
 <li><a href="/documentation/operators/catch.html"><code>onErrorReturn</code></a></li>
 <li><a href="/documentation/operators/catch.html"><code>onExceptionResumeNext</code></a></li>
 <li><a href="/documentation/operators/defaultifempty.html"><code>orElse</code></a></li>
+<li><a href="/documentation/operators/from.html"><code>pairs</code></a></li>
 <li><a href="/documentation/operators/buffer.html"><code>pairwise</code></a></li>
 <li><a href="/documentation/operators/groupby.html"><code>partition</code></a></li>
 <li><a href="/documentation/operators/window.html"><code>partition-all</code></a></li>
@@ -835,10 +840,10 @@ operators.</p>
 <li><a href="/documentation/operators/refcount.html"><code>share</code></a></li>
 <li><a href="/documentation/operators/replay.html"><code>shareReplay</code></a></li>
 <li><a href="/documentation/operators/refcount.html"><code>shareValue</code></a></li>
-<li><a href="/documentations/operators/first.html"><code>Single</code></a></li>
-<li><a href="/documentations/operators/first.html"><code>SingleOrDefault</code></a></li>
-<li><a href="/documentations/operators/first.html"><code>singleOption</code></a></li>
-<li><a href="/documentations/operators/first.html"><code>singleOrElse</code></a></li>
+<li><a href="/documentation/operators/first.html"><code>Single</code></a></li>
+<li><a href="/documentation/operators/first.html"><code>SingleOrDefault</code></a></li>
+<li><a href="/documentation/operators/first.html"><code>singleOption</code></a></li>
+<li><a href="/documentation/operators/first.html"><code>singleOrElse</code></a></li>
 <li><a href="/documentation/operators/count.html"><code>size</code></a></li>
 <li><a href="/documentation/operators/skip.html"><strong><code>Skip</code></strong></a></li>
 <li><a href="/documentation/operators/skiplast.html"><strong><code>SkipLast</code></strong></a></li>
