add links to Jafar's video tutorials

--- a/documentation/operators/map.html
+++ b/documentation/operators/map.html
@@ -28,6 +28,7 @@ id: map
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/08_Transformation.html#Select"><cite>Introduction to Rx</cite>: Select</a></li>
     <li><a href="http://rxmarbles.com/#map">RxMarbles: <code>map</code></a></li>
     <li><a href="http://rxwiki.wikidot.com/101samples#toc22"><cite>101 Rx Samples</cite>: Select &mdash; Indexed</a></li>
+    <li><a href="https://egghead.io/lessons/javascript-using-the-map-method-with-observable">Using the map method with Observable</a> by Jafar Husain (JavaScript Video Tutorial)</li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
