--- a/rxscala/index.html
+++ b/rxscala/index.html
@@ -115,7 +115,7 @@
 
 <p>RxScala brings <em>Reactive Extensions</em> to Scala. Rx was first implemented for <a href="https://rx.codeplex.com">.NET</a>, and is now also available in <a href="https://github.com/ReactiveX/RxJava">Java</a>. The RxScala project is an adaptor for RxJava. Its code is in a seperate <a href="https://github.com/ReactiveX/RxScala">repository</a> and it&#39;s also distributed on <a href="http://search.maven.org/#search%7Cga%7C1%7C%22rxscala%22%20AND%20g%3A%22io.reactivex%22">Maven Central</a>.</p>
 
-<p>Get started by looking at <a href="https://github.com/ReactiveX/RxScala/blob/0.x/src/examples/scala/rx/lang/scala/examples/RxScalaDemo.scala">RxScalaDemo.scala</a>, the <a href="https://github.com/ReactiveX/RxScala/tree/0.x/src/examples">RxScala examples</a>, or the <a href="/rxscala/scaladoc/index.html#rx.lang.scala.Observable">Scaladoc</a>.</p>
+<p>Get started by looking at <a href="https://github.com/ReactiveX/RxScala/blob/0.x/examples/src/test/scala/rx/lang/scala/examples/RxScalaDemo.scala">RxScalaDemo.scala</a>, the <a href="https://github.com/ReactiveX/RxScala/tree/0.x/examples/src">RxScala examples</a>, or the <a href="/rxscala/scaladoc/index.html#rx.lang.scala.Observable">Scaladoc</a>.</p>
 
 <p>There&#39;s also a <a href="/rxscala/comparison.html">comparison table</a> between Java Observable and Scala Observable.</p>
 
