Adding sections for RxSwift to the operator pages

--- a/documentation/operators/do.html
+++ b/documentation/operators/do.html
@@ -493,4 +493,10 @@ Finally</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift do %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
