--- a/documentation/operators/filter.html
+++ b/documentation/operators/filter.html
@@ -227,4 +227,10 @@ Completed</pre></div></figcaption>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift filter %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
