--- a/documentation/operators/just.html
+++ b/documentation/operators/just.html
@@ -186,4 +186,10 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift returnElement %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
