--- a/documentation/operators/catch.html
+++ b/documentation/operators/catch.html
@@ -534,4 +534,10 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift catch %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
