--- a/documentation/operators/concat.html
+++ b/documentation/operators/concat.html
@@ -267,4 +267,10 @@ Sequence complete</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift concat %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
