--- a/documentation/operators/debounce.html
+++ b/documentation/operators/debounce.html
@@ -261,4 +261,10 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift throttle %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
