--- a/documentation/operators/defer.html
+++ b/documentation/operators/defer.html
@@ -268,4 +268,10 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift defer %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
