--- a/documentation/operators/distinct.html
+++ b/documentation/operators/distinct.html
@@ -307,4 +307,10 @@ Completed</pre></div></figcaption>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift distinctUntilChanged %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
