--- a/documentation/operators/empty-never-throw.html
+++ b/documentation/operators/empty-never-throw.html
@@ -215,4 +215,10 @@ Error: Error: error!</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift empty never failWith %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
