--- a/documentation/operators/merge.html
+++ b/documentation/operators/merge.html
@@ -594,4 +594,10 @@ Error: Error: whoops!</pre></div>
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift merge %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
