--- a/documentation/operators/observeon.html
+++ b/documentation/operators/observeon.html
@@ -156,4 +156,10 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift observeSingleOn %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
