--- a/documentation/operators/publish.html
+++ b/documentation/operators/publish.html
@@ -348,4 +348,10 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift multicast publish %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
