--- a/documentation/operators/reduce.html
+++ b/documentation/operators/reduce.html
@@ -257,4 +257,10 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift foldl %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
