--- a/documentation/operators/refcount.html
+++ b/documentation/operators/refcount.html
@@ -218,4 +218,10 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift refCount %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
