--- a/documentation/operators/replay.html
+++ b/documentation/operators/replay.html
@@ -320,4 +320,10 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift replay %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
