--- a/documentation/operators/sample.html
+++ b/documentation/operators/sample.html
@@ -338,4 +338,10 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift sample %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
