--- a/documentation/operators/switch.html
+++ b/documentation/operators/switch.html
@@ -142,4 +142,10 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift switchLatest %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
