RxSwift FlatMap operator is concat
[FlatMap as concat](https://github.com/kzaher/RxSwift/blob/master/RxSwift/RxSwift/Observables/Observable%2BMultiple.swift#L30)

--- a/documentation/operators/flatmap.html
+++ b/documentation/operators/flatmap.html
@@ -585,4 +585,10 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift concat %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
