--- a/documentation/operators/combinelatest.html
+++ b/documentation/operators/combinelatest.html
@@ -225,4 +225,10 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift combineLatest %}
+     <p>
+      <span style="color:#ff0000">TBD</span>
+     </p>
+  {% endlang_operator %}
+
 </div>
