RxSwift startWith operator added

--- a/documentation/operators/startwith.html
+++ b/documentation/operators/startwith.html
@@ -220,4 +220,10 @@ myObservable.startWith(-3, -2, -1, 0).subscribe(
      </figure>
   {% endlang_operator %}
 
+  {% lang_operator RxSwift startWith %}
+    <p>
+     <span style="color:#f00">TBD</span>
+    </p>
+  {% endlang_operator %}
+
 </div>
