copying over changes from develop branch

--- a/documentation/operators.html
+++ b/documentation/operators.html
@@ -143,6 +143,9 @@ resembles the language-specific operator (so, for instance, the Rx.NET &ldquo;Se
 to the documentation of the <span class="operator">FlatMap</span> ReactiveX operator, of which
 &ldquo;SelectMany&rdquo; is the Rx.NET implementation).</p>
 
+<p>If you want to implement your own operator, see <a href="implement-operator.html">Implementing Your
+Own Operators</a>.</p>
+
 <h4>Contents</h4> 
 
 <ol>
