Add new RxPY operators
and maybe some previously overlooked ones

--- a/documentation/operators/combinelatest.html
+++ b/documentation/operators/combinelatest.html
@@ -207,7 +207,7 @@ Completed</pre></div>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxPY combine_latest %}
+  {% lang_operator RxPY combine_latest with_latest_from %}
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
