--- a/documentation/operators/flatmap.html
+++ b/documentation/operators/flatmap.html
@@ -567,7 +567,7 @@ Completed</pre></div>
     </ul>
   {% endlang_operator %}
 
-  {% lang_operator RxPY concat_all flat_map for_in many_select select_many %}
+  {% lang_operator RxPY concat_all expand flat_map for_in many_select select_many select_switch %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
