--- a/documentation/operators/to.html
+++ b/documentation/operators/to.html
@@ -482,7 +482,7 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxPY to_array to_dict to_future to_iterable to_list to_set %}
+  {% lang_operator RxPY BlockingObservable.to_iterable to_array to_blocking to_dict to_future to_iterable to_list to_marbles to_set %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
