--- a/documentation/operators/and-then-when.html
+++ b/documentation/operators/and-then-when.html
@@ -107,7 +107,7 @@ id: and-then-when
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxPY %}
+  {% lang_operator RxPY and_ then_do when %}
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
