--- a/documentation/operators/buffer.html
+++ b/documentation/operators/buffer.html
@@ -750,7 +750,7 @@ Observable&lt;List&lt;Integer&gt;&gt; burstyBuffered = burstyMulticast.buffer(bu
    </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxPY buffer buffer_with_count buffer_with_time buffer_with_time_or_count %}
+  {% lang_operator RxPY buffer buffer_with_count buffer_with_time buffer_with_time_or_count pairwise %}
    <p>
     RxPY has several <span class="operator">Buffer</span> variants: <code>buffer</code>,
     <code>buffer_with_count</code>, <code>buffer_with_time</code>, and
