--- a/documentation/operators/filter.html
+++ b/documentation/operators/filter.html
@@ -209,7 +209,7 @@ Completed</pre></div></figcaption>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxPY filter where %}
+  {% lang_operator RxPY filter slice where %}
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
