--- a/documentation/operators/from.html
+++ b/documentation/operators/from.html
@@ -691,7 +691,7 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxPY from_array from_callback from_future from_iterable from_list of %}
+  {% lang_operator RxPY from_array from_callback from_future from_iterable from_list from_marbles of %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
