--- a/documentation/operators/start.html
+++ b/documentation/operators/start.html
@@ -403,7 +403,7 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxPY start start_async %}
+  {% lang_operator RxPY start start_async to_async %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
