--- a/documentation/operators/subscribe.html
+++ b/documentation/operators/subscribe.html
@@ -314,7 +314,7 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
-  {% lang_operator RxPY subscribe %}
+  {% lang_operator RxPY BlockingObservable.for_each subscribe %}
     <p>
      <span style="color:#f00">TBD</span>
     </p>
