fixing <code> blocks for join vs groupJoin

--- a/documentation/operators/join.html
+++ b/documentation/operators/join.html
@@ -232,7 +232,7 @@
       <li>the second Observable to combine with the source Observable</li>
       <li>a function that accepts an item from the source Observable and returns an Observable whose lifespan governs the duration during which that item will combine with items from the second Observable</li>
       <li>a function that accepts an item from the second Observable and returns an Observable whose lifespan governs the duration during which that item will combine with items from the first Observable</li>
-      <li>a function that accepts an item from the first Observable and an item from the second Observable and returns an item to be emitted by the Observable returned from <code>groupJoin</code></li>
+      <li>a function that accepts an item from the first Observable and an item from the second Observable and returns an item to be emitted by the Observable returned from <code>join</code></li>
      </ol>
      <p>
       <code>join</code> does not by default operate on any particular <a href="../scheduler.html">Scheduler</a>.
@@ -295,7 +295,7 @@
       <li>the second Observable to combine with the source Observable</li>
       <li>a function that accepts an item from the source Observable and returns an Observable whose lifespan governs the duration during which that item will combine with items from the second Observable</li>
       <li>a function that accepts an item from the second Observable and returns an Observable whose lifespan governs the duration during which that item will combine with items from the first Observable</li>
-      <li>a function that accepts an item from the first Observable and an item from the second Observable and returns an item to be emitted by the Observable returned from <code>groupJoin</code></li>
+      <li>a function that accepts an item from the first Observable and an item from the second Observable and returns an item to be emitted by the Observable returned from <code>join</code></li>
      </ol>
      <p>
       <code>join</code> does not by default operate on any particular <a href="../scheduler.html">Scheduler</a>.
@@ -358,7 +358,7 @@
       <li>the second Observable to combine with the source Observable</li>
       <li>a function that accepts an item from the source Observable and returns an Observable whose lifespan governs the duration during which that item will combine with items from the second Observable</li>
       <li>a function that accepts an item from the second Observable and returns an Observable whose lifespan governs the duration during which that item will combine with items from the first Observable</li>
-      <li>a function that accepts an item from the first Observable and an item from the second Observable and returns an item to be emitted by the Observable returned from <code>groupJoin</code></li>
+      <li>a function that accepts an item from the first Observable and an item from the second Observable and returns an item to be emitted by the Observable returned from <code>join</code></li>
      </ol>
      <h4>Sample Code</h4>
      <div class="code javascript"><pre>
