copying recent changes over to master

--- a/documentation/operators.html
+++ b/documentation/operators.html
@@ -592,6 +592,7 @@ operators.</p>
 <li><a href="/documentation/operators/reduce.html"><code>Aggregate</code></a></li>
 <li><a href="/documentation/operators/all.html"><strong><code>All</code></strong></a></li>
 <li><a href="/documentation/operators/amb.html"><strong><code>Amb</code></strong></a></li>
+<li><a href="/documentation/operators/and-then-when.html"><code>and_</code></a></li>
 <li><a href="/documentation/operators/and-then-when.html"><strong><code>And</code></strong></a></li>
 <li><a href="/documentation/operators/contains.html"><code>Any</code></a></li>
 <li><a href="/documentation/operators/create.html"><code>apply</code></a></li>
@@ -670,6 +671,7 @@ operators.</p>
 <li><a href="/documentation/operators/all.html"><code>every</code></a></li>
 <li><a href="/documentation/operators/switch.html"><code>exclusive</code></a></li>
 <li><a href="/documentation/operators/contains.html"><code>exists</code></a></li>
+<li><a href="/documentation/operators/flatmap.html"><code>expand</code></a></li>
 <li><a href="/documentation/operators/empty-never-throw.html"><code>failWith</code></a></li>
 <li><a href="/documentation/operators/filter.html"><strong><code>Filter</code></strong></a></li>
 <li><a href="/documentation/operators/filter.html"><code>filterNot</code></a></li>
@@ -860,6 +862,7 @@ operators.</p>
 <li><a href="/documentation/operators/skipwhile.html"><strong><code>SkipWhile</code></strong></a></li>
 <li><a href="/documentation/operators/skipwhile.html"><code>skip_while_with_index</code></a></li>
 <li><a href="/documentation/operators/skip.html"><code>skip_with_time</code></a></li>
+<li><a href="/documentation/operators/filter.html"><code>slice</code></a></li>
 <li><a href="/documentation/operators/window.html"><code>sliding</code></a></li>
 <li><a href="/documentation/operators/buffer.html"><code>slidingBuffer</code></a></li>
 <li><a href="/documentation/operators/contains.html"><code>some</code></a></li>
