--- a/documentation/operators/and-then-when.html
+++ b/documentation/operators/and-then-when.html
@@ -338,7 +338,7 @@
         <div class="panel-heading" role="tab" id="headingRxPY">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseRxPY" aria-expanded="true" aria-controls="collapseRxPY">
-              RxPY <code></code>
+              RxPY <code>and_ then_do when</code>
             </a>
           </h4>
         </div>
