--- a/documentation/operators/buffer.html
+++ b/documentation/operators/buffer.html
@@ -966,7 +966,7 @@ Observable&lt;List&lt;Integer&gt;&gt; burstyBuffered = burstyMulticast.buffer(bu
         <div class="panel-heading" role="tab" id="headingRxPY">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseRxPY" aria-expanded="true" aria-controls="collapseRxPY">
-              RxPY <code>buffer buffer_with_count buffer_with_time buffer_with_time_or_count</code>
+              RxPY <code>buffer buffer_with_count buffer_with_time buffer_with_time_or_count pairwise</code>
             </a>
           </h4>
         </div>
