--- a/documentation/operators/combinelatest.html
+++ b/documentation/operators/combinelatest.html
@@ -438,7 +438,7 @@ Completed</pre></div>
         <div class="panel-heading" role="tab" id="headingRxPY">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseRxPY" aria-expanded="true" aria-controls="collapseRxPY">
-              RxPY <code>combine_latest</code>
+              RxPY <code>combine_latest with_latest_from</code>
             </a>
           </h4>
         </div>
