--- a/documentation/operators/filter.html
+++ b/documentation/operators/filter.html
@@ -440,7 +440,7 @@ Completed</pre></div></figcaption>
         <div class="panel-heading" role="tab" id="headingRxPY">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseRxPY" aria-expanded="true" aria-controls="collapseRxPY">
-              RxPY <code>filter where</code>
+              RxPY <code>filter slice where</code>
             </a>
           </h4>
         </div>
