--- a/documentation/operators/flatmap.html
+++ b/documentation/operators/flatmap.html
@@ -798,7 +798,7 @@ Completed</pre></div>
         <div class="panel-heading" role="tab" id="headingRxPY">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseRxPY" aria-expanded="true" aria-controls="collapseRxPY">
-              RxPY <code>concat_all flat_map for_in many_select select_many</code>
+              RxPY <code>concat_all expand flat_map for_in many_select select_many select_switch</code>
             </a>
           </h4>
         </div>
