--- a/documentation/operators/from.html
+++ b/documentation/operators/from.html
@@ -922,7 +922,7 @@ Completed</pre></div>
         <div class="panel-heading" role="tab" id="headingRxPY">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseRxPY" aria-expanded="true" aria-controls="collapseRxPY">
-              RxPY <code>from_array from_callback from_future from_iterable from_list of</code>
+              RxPY <code>from_array from_callback from_future from_iterable from_list from_marbles of</code>
             </a>
           </h4>
         </div>
