--- a/documentation/operators/subscribe.html
+++ b/documentation/operators/subscribe.html
@@ -545,7 +545,7 @@ Completed</pre></div>
         <div class="panel-heading" role="tab" id="headingRxPY">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseRxPY" aria-expanded="true" aria-controls="collapseRxPY">
-              RxPY <code>subscribe</code>
+              RxPY <code>BlockingObservable.for_each subscribe</code>
             </a>
           </h4>
         </div>
