--- a/documentation/operators/to.html
+++ b/documentation/operators/to.html
@@ -713,7 +713,7 @@ Completed</pre></div>
         <div class="panel-heading" role="tab" id="headingRxPY">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseRxPY" aria-expanded="true" aria-controls="collapseRxPY">
-              RxPY <code>to_array to_dict to_future to_iterable to_list to_set</code>
+              RxPY <code>BlockingObservable.to_iterable to_array to_blocking to_dict to_future to_iterable to_list to_marbles to_set</code>
             </a>
           </h4>
         </div>
