--- a/documentation/operators/start.html
+++ b/documentation/operators/start.html
@@ -634,7 +634,7 @@ Completed</pre></div>
         <div class="panel-heading" role="tab" id="headingRxPY">
           <h4 class="panel-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapseRxPY" aria-expanded="true" aria-controls="collapseRxPY">
-              RxPY <code>start start_async</code>
+              RxPY <code>start start_async to_async</code>
             </a>
           </h4>
         </div>
